[package]
name = "bevy_nakama"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "mit"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false }
nakama-rs = "0.1"

[dev-dependencies]
bevy = { version = "0.5", default-features = true }